--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,10 +7,11 @@
     <meta name="description" content="Blog related to forest community activities">
     <meta name="author" content="Anton Zhiliuk">
 
-    <title>Forest Community</title>
+    <title>Forest CommunityForest Community</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/blog-home.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rasa|Roboto" rel="stylesheet">
 
     <script src="js/main.js"></script>
 
