--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,6 +13,10 @@
     <link href="css/blog-home.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rasa|Roboto" rel="stylesheet">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/languages/clojure.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+
     <script src="js/main.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
