use markdown at post page

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Blog related to forest community activities">
     <meta name="author" content="Anton Zhiliuk">
 
-    <title>Forest CommunityForest Community</title>
+    <title>Forest Community</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/blog-home.css" rel="stylesheet">
