use cljsjs packages for markdown components and fix highlighting

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,10 +12,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/blog-home.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rasa|Roboto" rel="stylesheet">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/languages/clojure.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/zenburn.min.css" rel="stylesheet" type="text/css">
 
     <script src="js/main.js"></script>
 
