use bootstrap 4 sass and create repl scripts

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Blog related to forest community activities">
-    <meta name="author" content="Anton Zhiliuk">
+    <meta name="author" content="Anton Zhilyuk">
 
     <title>Forest Community</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/blog-home.css" rel="stylesheet">
+    <link href="css/bootstrap-4.0.0-beta.2/bootstrap.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rasa|Roboto" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/zenburn.min.css" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
